修改《性行为》章节内容。

--- a/main/sexual-activity/index.html
+++ b/main/sexual-activity/index.html
@@ -178,8 +178,9 @@
 			</div>
 			<div style="box-shadow: 5px 0 0 rgba(0, 0, 0, 0.5);"></div>
 			<div class="main">
-						<p>
-			在本节，性行为被分为一人以上的<strong>性交</strong>和自身性行为<strong>自慰</strong>两类进行叙述。
+						<!-- <p>人会对身体或精神上的性刺激产生生理反应，例如女性阴道壁的湿润、男性阴茎的勃起。</p> -->
+		<p>
+			在本节，性行为被分为一人以上的<strong>性交</strong>和自身性行为<strong>自慰</strong>两类进行叙述。此外，还有风险的规避与新生命的诞生过程的叙述。
 		</p>
 		 <h2 class="mt-4 mb-4">性交</h2>
 		<p><strong>性交</strong>，又称<strong>性爱</strong>、<strong>做爱</strong>、<strong>ML</strong>（英文 make love 之缩写），一般是指性器官接触的行为，如<sup id="cite_ref-性交" class="reference"><a href="#cite_note-性交" target="_self" aria-label="佐证资料">[1]</a></sup></p> 
@@ -193,26 +194,7 @@
 		
 		<p>性交的主要目的是为了获得性快感、繁殖下一代（仅阴茎插入阴道之行为，详见下文<a href="#new" target="_self">新生命</a>一节）。<sup id="cite_ref-性交" class="reference"><a href="#cite_note-性交" target="_self" aria-label="佐证资料">[1]</a></sup>所以，一般会反复刺激性器官使之发生性高潮，如阴茎—阴道性交中将阴茎反复插入、抽出。</p>
 		<p>无论何种阴道性交，初次性交并<span class="key">不一定</span>会出血或疼痛。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[9]</a></sup></p>
-		<h3 class="mt-4 mb-3">风险</h3>
-		<p>尽管性行为对身心健康和个人关系具有一定意义上积极的影响，但仍然有一些潜在的风险。然而，这些风险并不是让人们放弃性行为、因噎废食的理由，而是需要我们更加了解如何在性行为中保护自己和他人，并在做出决定前全面考虑这些风险。</p>
-		<p>
-			进行性行为的安全风险主要有：<strong>意外怀孕</strong>（仅异性性行为）、<strong>性传播疾病感染</strong>、<strong>身体伤害</strong>和<strong>精神伤害</strong><sup id="cite_ref-人类性行为" class="reference"><a href="#cite_note-人类性行为" target="_self" aria-label="佐证资料">[3]</a></sup>。
-		</p>
-			
-		<p>对于异性性行为，若男性阴茎射出的精液进入女性阴道内，则有可能导致女性怀孕。此外，精液与外阴的接触也有几率怀孕。<sup id="cite_ref-人类性行为" class="reference"><a href="#cite_note-人类性行为" target="_self" aria-label="佐证资料">[3]</a></sup>男性在受到性刺激时会由尿道口分泌透明无色而略粘稠的预射精液（尿道球腺液，常被误认为是前列腺液），当中也含有少量精子，因此亦可有几率导致女性怀孕。欲了解详情，可在稍后阅读本站内《避孕》一章。</p>
-		<p>性传播疾病可由皮肤、体液和粘膜的接触传染，患者有时外表并无症状。 </p>
-		<p>使用避孕套（又叫做安全套）是有效且便捷地防止意外怀孕、隔绝部分性传播疾病感染的方法。避孕套是一种广泛应用的医疗用品，通常用于覆盖男性阴茎，在药店、超市或便利店等地方都可以买到。作为一种医疗用品，在使用前，请仔细阅读避孕套盒内的说明书或说明文字，详细了解用途和使用方法。关于避孕套的使用步骤，也可参考 wikiHow 的文章：</p>
-		<p><a class="btn btn-outline-secondary" href="https://zh.wikihow.com/%E4%BD%BF%E7%94%A8%E9%81%BF%E5%AD%95%E5%A5%97"  role="button">如何使用避孕套 - wikiHow</a></p>
-				<p>为了减少风险，与他人发生性行为时，您应当了解必要的避孕与预防性传播疾病的知识。欲了解详情，可在稍后阅读本站内《性传播疾病》一章。</p>
-		 <h2 class="mt-4 mb-4">性同意</h2>
-		<p>性交的原则应当是<strong>双方自愿</strong>。不要强迫他人进行性交，强迫他人进行性交是严重违反道德和法律的行为。</p>
-		<p>您可通过下面的视频简要了解性同意的基本概念。</p>
-		<video controls style="width: 100%;" >
-			<source src="Tea_and_consent_x264@50KBps.webm" type="video/webm">
-			<source src="Tea_and_consent_x264@50KBps.mp4" type="video/mp4">
-			抱歉，您的浏览器暂不支持在线观看，您可尝试下载本视频：<a href="Tea_and_consent_x264@50KBps.mp4">MP4</a>。
-		</video>
-		<p><small>《喝茶与同意》，版权所有 ©2015 Emmeline May and Blue Seat Studios, via <a href="https://vimeo.com/128105683">https://vimeo.com/128105683</a></small></p>
+		
 		<h2 class="mt-4 mb-2" id="mas">自慰</h2>
 		<img loading="lazy" src="img/Klimt_Mulher_sentada.jpg" class="img-thumbnail thumb" alt="一名正在自慰的女性，画作艺术作品。">
 		<br><small>图 1 奥地利画家 Gustav Klimt 的画作《张开大腿的女人》</small>
@@ -241,6 +223,34 @@
 		<h3 class="mt-4 mb-3">男性自慰简述</h3>
 		<p>男性通常以握住<strong>阴茎</strong>上下移动摩擦的方式自慰。对于未进行过包皮手术的男性，可以利用包皮反复刺激<strong>龟头</strong>；而对于包皮无法覆盖龟头、在自慰过程中龟头裸露的男性，可以采取使用润滑液或使用唾液进行润滑后摩擦，避免引起龟头疼痛。</p>
 		
+		 <h2 class="mt-4 mb-4">性同意</h2>
+		<p>性交的原则应当是<strong>双方自愿</strong>。不要强迫他人进行性交，强迫他人进行性交是严重违反道德和法律的行为。</p>
+		<p>是否进行性行为是个人的决定，决定可能会因为诸多因素发生改变。应认识到决定会随着时间发生改变，要尊重他人的决定。</p>
+		<p>您可通过下面的视频简要了解性同意的基本概念。</p>
+		<video controls style="width: 100%;" >
+			<source src="Tea_and_consent_x264@50KBps.webm" type="video/webm">
+			<source src="Tea_and_consent_x264@50KBps.mp4" type="video/mp4">
+			抱歉，您的浏览器暂不支持在线观看，您可尝试下载本视频：<a href="Tea_and_consent_x264@50KBps.mp4">MP4</a>。
+		</video>
+		<p><small>《喝茶与同意》，版权所有 ©2015 Emmeline May and Blue Seat Studios, via <a href="https://vimeo.com/128105683">https://vimeo.com/128105683</a></small></p>
+		
+		<h2 class="mt-4 mb-3">风险规避</h2>
+		<p>对自己的性行为做出明智的决策有益于个人的健康和福祉。</p>
+		<p>尽管性行为对身心健康和个人关系具有一定意义上积极的影响，但仍然有一些潜在的风险。然而，这些风险并不是让人们放弃性行为、因噎废食的理由，而是需要我们更加了解如何在性行为中保护自己和他人，并在做出决定前全面考虑这些风险。</p>
+		<p>
+			进行性行为的安全风险主要有：<strong>意外怀孕</strong>（仅异性性行为）、<strong>性传播疾病感染</strong>、<strong>身体伤害</strong>和<strong>精神伤害</strong><sup id="cite_ref-人类性行为" class="reference"><a href="#cite_note-人类性行为" target="_self" aria-label="佐证资料">[3]</a></sup>。
+		</p>
+		<p>人们通常会根据自身情况做出决策，以规避潜在风险。例如以非交合的性行为代替<strong>交合</strong>（如阴茎—阴道性交）降低感染的风险，定期服用药物降低意外怀孕的风险。</p>
+			
+		<p>对于异性性行为，若男性阴茎射出的精液进入女性阴道内，则有可能导致女性怀孕。此外，精液与外阴的接触也有几率怀孕。<sup id="cite_ref-人类性行为" class="reference"><a href="#cite_note-人类性行为" target="_self" aria-label="佐证资料">[3]</a></sup>男性在受到性刺激时会由尿道口分泌透明无色而略粘稠的预射精液（尿道球腺液，常被误认为是前列腺液），当中也含有少量精子，因此亦可有几率导致女性怀孕。欲了解详情，可在稍后阅读本站内《避孕》一章。</p>
+		<p>性传播疾病可由皮肤、体液和粘膜的接触传染，患者有时外表并无症状。</p>
+		<p>使用避孕套（又叫做安全套）是有效且便捷地防止意外怀孕、隔绝部分性传播疾病感染的方法。避孕套是一种广泛应用的医疗用品，不仅可作为交合性行为使用（如<strong>男用避孕套</strong>套于阴茎或<strong>女用避孕套</strong>置于阴道），亦可制作成<strong>口交屏障</strong>。作为一种医疗用品，在使用前，请仔细阅读避孕套盒内的说明书或说明文字，详细了解用途和使用方法。也可参考站外文章：</p>
+		<ul>
+			<li><a href="https://zh.wikihow.com/%E4%BD%BF%E7%94%A8%E9%81%BF%E5%AD%95%E5%A5%97">如何使用（男用）避孕套 - wikiHow</a></li>
+			<li><a href="https://zh.wikihow.com/%E4%BD%BF%E7%94%A8%E5%A5%B3%E7%94%A8%E9%81%BF%E5%AD%95%E5%A5%97">如何使用女用避孕套 - wikiHow</a></li>
+			<li><a href="https://www.cdc.gov/condomeffectiveness/Dental-dam-use.html">制作口交屏障 - 美国疾控中心（英文资料）</a></li>
+		</ul>
+				<p>为了减少风险，与他人发生性行为时，您应当了解必要的避孕与预防性传播疾病的知识。欲了解详情，可在稍后阅读本站内<a href="/main/std">《性传播疾病》</a>一章。对于希望了解避孕的读者，可在稍后阅读本站内<a href="/main/contraception">《避孕》</a>一章。</p>
 		<h2 class="mt-4 mb-2" id="new">新生命</h2>
 		<!--<p>以下文字描述可对照 <em>图 2 女性生殖系统</em> 参考。</p>-->
 		<p>在<strong>性交</strong>过程中，男性的<strong>阴茎</strong>受刺激而勃起变硬，从<strong>阴道口</strong>进入<strong>阴道</strong>，阴道与阴茎摩擦，在一段时间后阴茎在阴道内<strong>射精</strong>。</p>
