--- a/main/sexual-activity/index.html
+++ b/main/sexual-activity/index.html
@@ -180,7 +180,7 @@
 			<div class="main">
 						<!-- <p>人会对身体或精神上的性刺激产生生理反应，例如女性阴道壁的湿润、男性阴茎的勃起。</p> -->
 		<p>
-			在本节，性行为被分为一人以上的<strong>性交</strong>和自身性行为<strong>自慰</strong>两类进行叙述。此外，还有风险的规避与新生命的诞生过程的叙述。
+			在本节，性行为被分为一人以上的<strong>性交</strong>和自身性行为<strong>自慰</strong>两类进行叙述。此外，还有风险的规避与新生命之叙述。
 		</p>
 		 <h2 class="mt-4 mb-4">性交</h2>
 		<p><strong>性交</strong>，又称<strong>性爱</strong>、<strong>做爱</strong>、<strong>ML</strong>（英文 make love 之缩写），一般是指性器官接触的行为，如<sup id="cite_ref-性交" class="reference"><a href="#cite_note-性交" target="_self" aria-label="佐证资料">[1]</a></sup></p> 
