完善《避孕》内容。

--- a/main/contraception/index.html
+++ b/main/contraception/index.html
@@ -318,8 +318,21 @@
         </ul>
         <p><strong>含铜宫内节育器</strong>最为有效，且可以继续留在体内持续避孕。</p>
         <p>进行措施越早，效果越好。</p>
-        <p>避孕失败或无保护性交后，若女方月经延迟一周没有来，则要高度怀疑意外怀孕的可能性。在正常情况下，女性月经周期推后约两周就可以进行检测是否怀孕。早孕的检测可以用试纸等检测到，可在药店买到。确认怀孕且暂无抚养计划后，要尽快到医院采取相关措施。</p>
-        
+
+        <h2 class="mt-4 mb-4">怀孕检测</h2>
+        <p>尽管现代避孕的成功率已大大提升，但仍有几率发生非意愿怀孕。</p>
+        <p>在性行为后，若女方月经延迟一周没有来，则要高度怀疑意外怀孕的可能性。在正常情况下，女性月经周期推后约两周就可以进行检测是否怀孕（验孕）。但无论是否怀孕，无故月经推迟较久时间也是应到医院就诊的情况。</p>
+        <p>正常情况下，可从怀孕的女性体内检出<strong>人绒毛膜促性腺激素（hCG）</strong>，且 hCG 仅于怀孕的女性体内发现。因此 <strong>hCG 试验</strong>是可靠的验孕方式。常用的一个方法是用尿样检测其 hCG 含量，于 7 ~ 12 天内可检出。可以在药店买到相关的验孕器具。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[13]</a></sup></p>
+        <img loading="lazy" src="img/Zwangerschapstesten.jpg" class="img-thumbnail thumb" alt="图 13， 验孕棒，一种检测怀孕的器具，形状像一根笔，外观扁平，有一观察区域显示测试结果。"><br>
+        <small>图 13 hCG 试验器具——验孕棒</small><br><br>
+        <p>考虑到受到各种因素影响，使用试验的方法可能会产生假阳性或假阴性结果。最终确定怀孕要依靠以下三种手段之一：<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[13]</a></sup></p>
+        <ul>
+          <li>确认胎儿心跳存在；</li>
+          <li>胎儿骨骼影像显示（例如使用超声波检查）；</li>
+          <li>测出胎动。</li>
+        </ul>
+        <p>相比试验方法，这些手段检出怀孕的时间要晚一些。</p>
+        <p>确认怀孕且暂无抚养计划后，要尽快到医院采取相关措施。</p>
         <div class="notice bg-light">
           <p>
             <svg width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" fill="white" fill-opacity="0.01"/><path d="M21 44L20 36" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M44 44V12H25L26 20L27 28L28 36L21 44H44Z" fill="none" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M27 28H35" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M26 20H35" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M4 4H24L25 12L26 20L27 28L28 36H20H4V4Z" fill="none" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 12H17" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 20H18" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 28H19" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg>            
@@ -472,7 +485,7 @@
 <li id="cite_note-宫内节育器"><span class="mw-cite-backlink"><b><a href="#cite_ref-宫内节育器" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">The Manual's Editorial Staff. 小知识: 宫内节育器[G/OL].  默沙东诊疗手册大众版, c2022[2022-06-14].&nbsp;<a href="https://www.msdmanuals.cn/home/quick-facts-women-s-health-issues/family-planning/intrauterine-devices">https://www.msdmanuals.cn/home/quick-facts-women-s-health-issues/family-planning/intrauterine-devices</a></span></li>
 <li id="cite_note-紧急避孕"><span class="mw-cite-backlink"><b><a href="#cite_ref-紧急避孕" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">The Manual's Editorial Staff. 小知识: 紧急避孕[G/OL].  默沙东诊疗手册大众版, c2022[2022-06-14].&nbsp;<a href="https://www.msdmanuals.cn/home/quick-facts-women-s-health-issues/family-planning/emergency-contraception">https://www.msdmanuals.cn/home/quick-facts-women-s-health-issues/family-planning/emergency-contraception</a></span></li>
 <li id="cite_note-性传播疾病概述"><span class="mw-cite-backlink"><b><a href="#cite_ref-性传播疾病概述" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">小知识: 性传播疾病概述 - 《默克诊疗手册家庭版》.&nbsp;<a href="https://www.msdmanuals.cn/home/quick-facts-infections/sexually-transmitted-diseases-stds/overview-of-sexually-transmitted-diseases">https://www.msdmanuals.cn/home/quick-facts-infections/sexually-transmitted-diseases-stds/overview-of-sexually-transmitted-diseases</a></span></li>
-<li id="cite_note-性学观止"><span class="mw-cite-backlink"><b><a href="#cite_ref-性学观止" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">贺兰特·凯查杜里安.性学观止[M].北京:科学技术文献出版社,2019.3:209-12 - ISBN 978-7-5189-5126-0</span></li>
+<li id="cite_note-性学观止"><span class="mw-cite-backlink"><b><a href="#cite_ref-性学观止" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">贺兰特·凯查杜里安.性学观止[M].北京:科学技术文献出版社,2019.3:165,209-12 - ISBN 978-7-5189-5126-0</span></li>
 <li id="cite_note-FCWCD"><span class="mw-cite-backlink"><b><a href="#cite_ref-FCWCD" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">拜耳医药保健有限公司.女用避孕套 | WCD China[G/OL].WCD China,[2022-06-13].&nbsp;<a href="https://www.china-wcd.com/your-questions/female-condoms">https://www.china-wcd.com/your-questions/female-condoms</a></span></li>
 
             </ol>
@@ -561,6 +574,11 @@
                     <td>图 12</td>
                     <td><a href="https://www.rhsupplies.org/">生殖健康用品联盟</a></td>
                     <td><a href="https://unsplash.com/photos/cHrcHdg2H9E">Unsplash</a></td>
+                  </tr>
+                  <tr>
+                    <td>图 13</td>
+                    <td>Zwager</td>
+                    <td><a href="https://commons.wikimedia.org/wiki/File:Zwangerschapstesten.jpg">Wikimedia Commons</a></td>
                   </tr>
           </tbody>
     </table>
