--- a/general/communicate/index.html
+++ b/general/communicate/index.html
@@ -39,8 +39,8 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@700&family=Noto+Serif+SC:wght@400;700&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="/style/style.min.css">
-	<link rel="stylesheet" href="/style/magazine.css">
+	<link rel="stylesheet" href="/style/style.min.css?202306">
+	<!-- <link rel="stylesheet" href="/style/magazine.css"> -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-204367285-1"></script>
 	<script>
@@ -189,14 +189,14 @@
     <p>如果你有自己的疑惑、焦虑希望得到我们的帮助，或者希望和我们合作，欢迎通过下面的方式来联系我们。</p>
     <p>您可以选择公开提问的内容，以帮助其他有疑虑的人。我们将对可能与您产生联系的信息抹去。</p>
     <p>请注意，回信者的观点并不代表 KnowSex 官方的观点。</p>
-     <h2 class="mt-4 mb-4">电子邮件</h2>
+     <h2>电子邮件</h2>
         <p>
             <a href="mailto:knowsex@outlook.com" style="text-decoration: underline; font-weight: 700; font-size: 1.2em; color:#5dbd90;">
                 knowsex@outlook.com
             </a>
         </p>
         <p>如果太久没有收到回信，记得检查你的垃圾箱——我们的邮件可能会被误认为是垃圾邮件。</p>
-     <h2 class="mt-4 mb-4">在线表单（试行）</h2>
+     <h2>在线表单（试行）</h2>
     
     <p>您也可以填写在线表单进行提问，可通过下方按钮进行填写。</p>
     <p>如果太久没有收到回信，请回访本页面，查看下方<a href="#exception" target="_self">回信状态异常列表</a>。</p>
@@ -204,7 +204,7 @@
     <!-- <div class="img-box">
         <img loading="lazy" src="img/kdocs.svg" alt="表单二维码" class="img-thumbnail" style="width:100%;max-width:200px;margin:auto">
     </div>    	 -->
-    <h2 class="mt-4 mb-4" id="exception">回信状态异常列表</h2>
+    <h2 id="exception">回信状态异常列表</h2>
 	<p>下面是近期一些 KnowSex 复信组无法与来信者取得联系的情况之列表。如果您的来信位于列表中，且需要继续联系 KnowSex ，请根据情况与复信组取得联系，也可重新发送邮件或提交表单。</p>
     <p>该列表不定期擦除，更新稍有延迟。</p>
     <p style="color: #A4A2A2">⇆ 表格若未完全显示，可左右滑动。</p>
