--- a/main/sexual-activity/index.html
+++ b/main/sexual-activity/index.html
@@ -39,8 +39,8 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@700&family=Noto+Serif+SC:wght@400;700&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="/style/style.min.css">
-	<link rel="stylesheet" href="/style/magazine.css">
+	<link rel="stylesheet" href="/style/style.min.css?202306">
+	<!-- <link rel="stylesheet" href="/style/magazine.css"> -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-204367285-1"></script>
 	<script>
@@ -182,7 +182,7 @@
 		<p>
 			在本节，性行为被分为一人以上的<strong>性交</strong>和自身性行为<strong>自慰</strong>两类进行叙述。此外，还有风险的规避与新生命之叙述。
 		</p>
-		 <h2 class="mt-4 mb-4">性交</h2>
+		 <h2>性交</h2>
 		<p><strong>性交</strong>，又称<strong>性爱</strong>、<strong>做爱</strong>、<strong>ML</strong>（英文 make love 之缩写），一般是指性器官接触的行为，如<sup id="cite_ref-性交" class="reference"><a href="#cite_note-性交" target="_self" aria-label="佐证资料">[1]</a></sup></p> 
 		<ul>
 			<li>阴茎插入阴道、 </li>
@@ -223,7 +223,7 @@
 		<h3 class="mt-4 mb-3">男性自慰简述</h3>
 		<p>男性通常以握住<strong>阴茎</strong>上下移动摩擦的方式自慰。对于未进行过包皮手术的男性，可以利用包皮反复刺激<strong>龟头</strong>；而对于包皮无法覆盖龟头、在自慰过程中龟头裸露的男性，可以采取使用润滑液或使用唾液进行润滑后摩擦，避免引起龟头疼痛。</p>
 		
-		 <h2 class="mt-4 mb-4">性同意</h2>
+		 <h2>性同意</h2>
 		<p>性交的原则应当是<strong>双方自愿</strong>。不要强迫他人进行性交，强迫他人进行性交是严重违反道德和法律的行为。</p>
 		<p>是否进行性行为是个人的决定，决定可能会因为诸多因素发生改变。应认识到决定会随着时间发生改变，要尊重他人的决定。</p>
 		<p>您可通过下面的视频简要了解性同意的基本概念。</p>
@@ -268,9 +268,9 @@
 				<p class="bg-light" style="padding:10px;margin:5px 0;"><span class="darkmode-ignore">⭐</span> 你的 <a
 						href="/general/encourage" style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
 				<div class="article-info">
-							 <h2 class="mt-4 mb-4">注释</h2>
+							 <h2>注释</h2>
 		<p id="note"><a href="#light" target="_self">^</a>注：据<a href="https://flk.npc.gov.cn/detail2.html?MmM5MDlmZGQ2NzhiZjE3OTAxNjc4YmY3NDc4ZTA2OTU">《中华人民共和国治安管理处罚法》</a>第四十四条，“猥亵他人的，或者在公共场所<span class="key">故意裸露身体</span>，情节恶劣的，处五日以上十日以下拘留”。</p>
-		 <h2 class="mt-4 mb-4 reference">参考资料</h2>
+		 <h2 class="reference">参考资料</h2>
 		<ol class="reference-list"> 
 			<li id="cite_note-性交"><span class="mw-cite-backlink"><b><a href="#cite_ref-性交" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">维基百科编者. 性交[G/OL]. 维基百科, 2022(20220509)[2022-05-09].&nbsp;<a href="https://zh.wikipedia.org/w/index.php?title=%E6%80%A7%E4%BA%A4&oldid=71552985">https://zh.wikipedia.org/w/index.php?title=%E6%80%A7%E4%BA%A4&oldid=71552985</a></span></li>
 <li id="cite_note-性行为概述"><span class="mw-cite-backlink"><b><a href="#cite_ref-性行为概述" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">George R. Brown. 性行为概述[G/OL]. 默沙东诊疗手册医学专业人士版, 2019(201907)[2019-07].&nbsp;<a href="https://www.msdmanuals.cn/professional/psychiatric-disorders/gender-dysphoria/overview-of-sexual-behavior">https://www.msdmanuals.cn/professional/psychiatric-disorders/gender-dysphoria/overview-of-sexual-behavior</a></span></li>
@@ -284,7 +284,7 @@
 <li id="cite_note-20世纪对自我性刺激的认识"><span class="mw-cite-backlink"><b><a href="#cite_ref-20世纪对自我性刺激的认识" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">Erwin J. Haeberle. 20世纪对自我性刺激的认识[G/OL]. 性学资料库, 2007(200703)[2022-06-02].&nbsp;<a href="http://www.sexarchive.info/ECC6/html/20th_century.html">http://www.sexarchive.info/ECC6/html/20th_century.html</a></span></li>
 
 		</ol>
-		 <h2 class="mt-4 mb-4">版权</h2>
+		 <h2>版权</h2>
 		<h3 class="mt-4 mb-3">正文内容</h3>
 		<p>详见<a href="/general/copyright">版权许可</a>。</p>
 		<h3 class="mt-4 mb-3">图片来源</h3>
