--- a/main/std/aids/index.html
+++ b/main/std/aids/index.html
@@ -39,8 +39,8 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@700&family=Noto+Serif+SC:wght@400;700&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="/style/style.min.css">
-	<link rel="stylesheet" href="/style/magazine.css">
+	<link rel="stylesheet" href="/style/style.min.css?202306">
+	<!-- <link rel="stylesheet" href="/style/magazine.css"> -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-204367285-1"></script>
 	<script>
@@ -226,7 +226,7 @@
 				<p class="bg-light" style="padding:10px;margin:5px 0;"><span class="darkmode-ignore">⭐</span> 你的 <a
 						href="/general/encourage" style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
 				<div class="article-info">
-					<h2 class="mt-4 mb-4 reference">参考资料</h2>
+					<h2 class="reference">参考资料</h2>
 <ol class="reference-list">
   <li id="cite_note-诊断"><span class="mw-cite-backlink"><b><a href="#cite_ref-诊断" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">中华人民共和国国家卫生健康委员会. WS 293-2019 艾滋病和艾滋病病毒感染诊断[S/OL]. 未知出版地:中华人民共和国国家卫生健康委员会, 2019.&nbsp;<a href="http://www.nhc.gov.cn/wjw/s9491/201905/6430aa653728439c901a7340796e4723.shtml">http://www.nhc.gov.cn/wjw/s9491/201905/6430aa653728439c901a7340796e4723.shtml</a></span></li>
 <li id="cite_note-诊疗指南"><span class="mw-cite-backlink"><b><a href="#cite_ref-诊疗指南" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">中华医学会感染病学分会艾滋病丙型肝炎学组，中国疾病预防控制中心. 中国艾滋病诊疗指南(2021年版)[J/OL]. 协和医学杂志, 2022, 13(2): 203-226. doi: 10.12290/xhyxzz.2022-0097.&nbsp;<a href="https://xhyxzz.pumch.cn/cn/article/doi/10.12290/xhyxzz.2022-0097?viewType=HTML">https://xhyxzz.pumch.cn/cn/article/doi/10.12290/xhyxzz.2022-0097?viewType=HTML</a></span></li>
@@ -234,7 +234,7 @@
 <li id="cite_note-世界艾滋病日"><span class="mw-cite-backlink"><b><a href="#cite_ref-世界艾滋病日" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">世界卫生组织. 世界艾滋病日[EB/OL]. 世界卫生组织, [2023-05-13].&nbsp;<a href="https://www.who.int/zh/campaigns/world-aids-day">https://www.who.int/zh/campaigns/world-aids-day</a></span></li>
 
 </ol>
-<h2 class="mt-4 mb-4">版权</h2>
+<h2>版权</h2>
 <h3 class="mt-4 mb-3">正文内容</h3>
 <p>详见<a href="/general/copyright">版权许可</a>。</p>
 <h3 class="mt-4 mb-3">图片来源</h3>
