--- a/main/std/genital-wart/index.html
+++ b/main/std/genital-wart/index.html
@@ -39,8 +39,8 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@700&family=Noto+Serif+SC:wght@400;700&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="/style/style.min.css">
-	<link rel="stylesheet" href="/style/magazine.css">
+	<link rel="stylesheet" href="/style/style.min.css?202306">
+	<!-- <link rel="stylesheet" href="/style/magazine.css"> -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-204367285-1"></script>
 	<script>
@@ -184,10 +184,10 @@
 			<div class="main">
 				<p><span class="darkmode-ignore">⭐</span>本文作者为<b>神奇的红毛丹</b>。</p>
 <p>尖锐湿疣是由<strong>人乳头状病毒</strong>（简称 <strong>HPV</strong> ）感染所引起的一种性传播疾病。<sup id="cite_ref-尖锐湿疣诊断" class="reference"><a href="#cite_note-尖锐湿疣诊断" target="_self" aria-label="佐证资料">[1]</a></sup>感染后可长出性器疣。</p>
-<h2 class="mt-4 mb-4">传播</h2>
+<h2>传播</h2>
 <p>性接触为主要传播方式，男女皆可感染。也有无不洁性交史的人因间接接触发病。<sup id="cite_ref-非性接触" class="reference"><a href="#cite_note-非性接触" target="_self" aria-label="佐证资料">[2]</a></sup>HPV 病毒也可由母亲传染给新生儿。注射 HPV 疫苗可有效防止感染。<sup id="cite_ref-中国医药" class="reference"><a href="#cite_note-中国医药" target="_self" aria-label="佐证资料">[3]</a></sup><sup id="cite_ref-默沙东" class="reference"><a href="#cite_note-默沙东" target="_self" aria-label="佐证资料">[4]</a></sup></p>
 <p>避孕套不能起到很充分的保护作用，因为避孕套无法遮住所有受感染的部位。更推荐的预防办法是减少与性行为经历不明者发生性行为、尽量避免自身的皮肤与受感染的组织直接接触。<sup id="cite_ref-默沙东" class="reference"><a href="#cite_note-默沙东" target="_self" aria-label="佐证资料">[4]</a></sup></p>
-<h2 class="mt-4 mb-4">症状</h2>
+<h2>症状</h2>
 <p>受到生殖器 HPV 病毒株感染后，一般 2 周至 8 个月内即长出性器疣。疣的外观可能较小而平，也有可能较大成簇。<sup id="cite_ref-Mayo" class="reference"><a href="#cite_note-Mayo" target="_self" aria-label="佐证资料">[5]</a></sup></p>
 <p>口交可能使口腔及喉咙生疣。肛交也可能使肛门和直肠内发生感染。<sup id="cite_ref-默沙东" class="reference"><a href="#cite_note-默沙东" target="_self" aria-label="佐证资料">[4]</a></sup><sup id="cite_ref-Mayo" class="reference"><a href="#cite_note-Mayo" target="_self" aria-label="佐证资料">[5]</a></sup></p>
 <p>男性患者最常见的病征，包括阴茎、阴囊或肛门长出一些痒或不痛的肉色小粒。女性患者白带可能增多，伴随外阴瘙痒或灼痛。在外阴、阴道、宫颈、尿道口及肛门周围生出菜花状或鸡冠样的赘生物。如疣生长在女性的子宫颈，则可能会引致轻微出血。<sup id="cite_ref-中国医药" class="reference"><a href="#cite_note-中国医药" target="_self" aria-label="佐证资料">[3]</a></sup></p>
@@ -208,7 +208,7 @@
     </div>
   </div>
 </div>
-<h2 class="mt-4 mb-4">就诊</h2>
+<h2>就诊</h2>
 <p>如感觉生殖器部位有出现肿块或疣，请及时前往医院。 </p>
 <p>尖锐湿疣常与无害的阴茎珍珠疹、假性湿疣混淆。醋酸白试验能够鉴别是否是尖锐湿疣。<sup id="cite_ref-尖锐湿疣诊断" class="reference"><a href="#cite_note-尖锐湿疣诊断" target="_self" aria-label="佐证资料">[1]</a></sup></p>
 <div class="row show">
@@ -227,13 +227,13 @@
     <br><small>图 4 假性湿疣（无害）与尖锐湿疣（图中称“菜花”）对比（<a href="https://www.pskin.tw/machine-info.asp?id=2038">彭贤礼皮肤科诊所</a>供图）</small>
   </div>
 </div>
-<h2 class="mt-4 mb-4">预后</h2>
+<h2>预后</h2>
 <p>尖锐湿疣预后一般较好，大多数患者治疗后皮损可以改善或消退。部分情况下症状可能自行消退，但大多数病例不会自愈。治疗可能减少HPV感染，但无法根除感染。治疗后复发率较高，但最终易达到临床治愈。<sup id="cite_ref-中国医药" class="reference"><a href="#cite_note-中国医药" target="_self" aria-label="佐证资料">[3]</a></sup></p>
 								<a class="btn btn-outline-secondary" href="/" target="_self" role="button">⬅&nbsp;返回主页</a>				<div id="main-end"></div>
 				<p class="bg-light" style="padding:10px;margin:5px 0;"><span class="darkmode-ignore">⭐</span> 你的 <a
 						href="/general/encourage" style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
 				<div class="article-info">
-					<h2 class="mt-4 mb-4 reference">参考资料</h2>
+					<h2 class="reference">参考资料</h2>
 <ol class="reference-list">
   <li id="cite_note-尖锐湿疣诊断"><span class="mw-cite-backlink"><b><a href="#cite_ref-尖锐湿疣诊断" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">中华人民共和国国家卫生和计划生育委员会. WS/T 235-2016 尖锐湿疣诊断[S/OL]. 未知出版地:未知出版者,2016.&nbsp;<a href="http://www.nhc.gov.cn/wjw/s9491/201804/9aef5c170b67438a963dc8341047a128.shtml">http://www.nhc.gov.cn/wjw/s9491/201804/9aef5c170b67438a963dc8341047a128.shtml</a></span></li>
 <li id="cite_note-非性接触"><span class="mw-cite-backlink"><b><a href="#cite_ref-非性接触" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">桑明,颜廷凯,揭丽云.非性接触致幼女尖锐湿疣1例[J].皮肤病与性病,2018,40(04):524-525.</span></li>
@@ -242,7 +242,7 @@
 <li id="cite_note-Mayo"><span class="mw-cite-backlink"><b><a href="#cite_ref-Mayo" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">妙佑医疗国际员工. 生殖器疣[G/OL]. 妙佑医疗国际, 2022(20220124)[2023-02-20].&nbsp;<a href="https://www.mayoclinic.org/zh-hans/diseases-conditions/genital-warts/symptoms-causes/syc-20355234">https://www.mayoclinic.org/zh-hans/diseases-conditions/genital-warts/symptoms-causes/syc-20355234</a></span></li>
 
 </ol>
-<h2 class="mt-4 mb-4">版权</h2>
+<h2>版权</h2>
 <h3 class="mt-4 mb-3">正文内容</h3>
 <p>详见<a href="/general/copyright">版权许可</a>。</p>
 <h3 class="mt-4 mb-3">图片来源</h3>
