--- a/main/std/gonorrhea/index.html
+++ b/main/std/gonorrhea/index.html
@@ -39,8 +39,8 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@700&family=Noto+Serif+SC:wght@400;700&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="/style/style.min.css">
-	<link rel="stylesheet" href="/style/magazine.css">
+	<link rel="stylesheet" href="/style/style.min.css?202306">
+	<!-- <link rel="stylesheet" href="/style/magazine.css"> -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-204367285-1"></script>
 	<script>
@@ -217,7 +217,7 @@
 				<p class="bg-light" style="padding:10px;margin:5px 0;"><span class="darkmode-ignore">⭐</span> 你的 <a
 						href="/general/encourage" style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
 				<div class="article-info">
-					<h2 class="mt-4 mb-4 reference">参考资料</h2>
+					<h2 class="reference">参考资料</h2>
 <ol class="reference-list">
   <li id="cite_note-性学观止"><span class="mw-cite-backlink"><b><a href="#cite_ref-性学观止" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">贺兰特·凯查杜里安.性学观止[M].北京:科学技术文献出版社,2019.3 - ISBN 978-7-5189-5126-0</span></li>
 <li id="cite_note-健康的性"><span class="mw-cite-backlink"><b><a href="#cite_ref-健康的性" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">姚锦仙,程红. 健康的性[M]. 北京:高等教育出版社,2015.3 - ISBN 978-7-04-041738-8</span></li>
@@ -225,7 +225,7 @@
 <li id="cite_note-CDC"><span class="mw-cite-backlink"><b><a href="#cite_ref-CDC" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">Division of STD Prevention, National Center for HIV, Viral Hepatitis, STD, and TB Prevention, Centers for Disease Control and Prevention. Gonorrhea – CDC Basic Fact Sheet[G/OL]. Centers for Disease Control and Prevention, 2022(20220412)[2022-08-25].&nbsp;<a href="https://www.cdc.gov/std/gonorrhea/stdfact-gonorrhea.htm">https://www.cdc.gov/std/gonorrhea/stdfact-gonorrhea.htm</a></span></li>
 
 </ol>
-<h2 class="mt-4 mb-4">版权</h2>
+<h2>版权</h2>
 <h3 class="mt-4 mb-3">正文内容</h3>
 <p>详见<a href="/general/copyright">版权许可</a>。</p>
 <h3 class="mt-4 mb-3">图片来源</h3>
