--- a/sub/extended-reading/index.html
+++ b/sub/extended-reading/index.html
@@ -39,8 +39,8 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@700&family=Noto+Serif+SC:wght@400;700&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="/style/style.min.css">
-	<link rel="stylesheet" href="/style/magazine.css">
+	<link rel="stylesheet" href="/style/style.min.css?202306">
+	<!-- <link rel="stylesheet" href="/style/magazine.css"> -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-204367285-1"></script>
 	<script>
@@ -197,7 +197,7 @@
 				<p class="bg-light" style="padding:10px;margin:5px 0;"><span class="darkmode-ignore">⭐</span> 你的 <a
 						href="/general/encourage" style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
 				<div class="article-info">
-							 <h2 class="mt-4 mb-4">版权</h2>
+							 <h2>版权</h2>
 		<h3 class="mt-4 mb-3">图片来源</h3>
 		<p>本页图片来自互联网，且均在版权合规要求下使用。</p>
 		<table class="table table-bordered" style="overflow:auto">
