--- a/general/about/index.html
+++ b/general/about/index.html
@@ -39,8 +39,8 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@700&family=Noto+Serif+SC:wght@400;700&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="/style/style.min.css">
-	<link rel="stylesheet" href="/style/magazine.css">
+	<link rel="stylesheet" href="/style/style.min.css?202306">
+	<!-- <link rel="stylesheet" href="/style/magazine.css"> -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-204367285-1"></script>
 	<script>
@@ -230,14 +230,14 @@
     <p>KnowSex 团队独立运营本站，运营资金来源于读者的支持、站长自费和支付宝赚钱红包的推广。</p>
     <p>本站正式名称为“KnowSex”。</p>
     
-    <h2 class="mt-4 mb-4">相关人员</h2>
+    <h2>相关人员</h2>
     <p>本站创始人、站长是 <b>Linn</b> 。</p>
     <p>目前，<b>Linn</b> 负责策划、内容撰写、页面开发、服务器维护和社交媒体运营。</p>
     <p>本站内容《避孕》一节由<a href="https://www.zhihu.com/people/woden-5"><b>戟空悦</b></a>进行了指导和建议。</p>
     <p><b>张子君</b>、<b>神奇的红毛丹</b>等人负责读者来信工作。</p>
     <p><b>X.Ran Lin</b>、<b>沈逸林</b>为本站内容提供了一部分照片。</p>
     
-    <h2 class="mt-4 mb-4">社交媒体</h2>
+    <h2>社交媒体</h2>
     <p>在页面底部您可以找到我们的社交媒体平台。</p>
     <p>本站注册有 <a href="https://twitter.com/KnowSex_net">Twitter</a> 、<a href="https://o3o.ca/@knowsex">Mastodon</a> 、<a href="https://github.com/knowsex">GitHub</a> 、<a href="https://t.me/KnowSex_net">Telegram 频道</a>和<a href="https://okjk.co/IJ8Ur">即刻 App</a> 账号。</p>
 								<a class="btn btn-outline-secondary" href="/" target="_self" role="button">⬅&nbsp;返回主页</a>				<div id="main-end"></div>
