--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@700&family=Noto+Serif+SC:wght@400;700&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="/style/style.min.css">
-	<link rel="stylesheet" href="/style/magazine.css">
+	<link rel="stylesheet" href="/style/style.min.css?202306">
+	<!-- <link rel="stylesheet" href="/style/magazine.css"> -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-204367285-1"></script>
 	<script>
@@ -177,7 +177,7 @@
         <div id="domain-notice"></div>
         <div class="browser_tip"></div>
         <br>
-        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-06-09</div>
+        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-06-12</div>
 
         <div class="header-thumb">
   <a href="main/human-reproductive-system">
