--- a/main/sexual-orientation/index.html
+++ b/main/sexual-orientation/index.html
@@ -39,8 +39,8 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@700&family=Noto+Serif+SC:wght@400;700&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="/style/style.min.css">
-	<link rel="stylesheet" href="/style/magazine.css">
+	<link rel="stylesheet" href="/style/style.min.css?202306">
+	<!-- <link rel="stylesheet" href="/style/magazine.css"> -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-204367285-1"></script>
 	<script>
@@ -185,23 +185,23 @@
 	<p>性取向可由一些问卷做参考。</p>
 	<p><a class="btn btn-outline-secondary" href="https://www.idrlabs.com/cn/sexual-orientation/test.php"  role="button">性取向测试</a></p>
 	<p><small>测试结果仅供个人参考。受网络环境影响，您有可能无法直接打开该链接。该链接不属于 KnowSex 。</small></p>
-	 <h2 class="mt-4 mb-4">异性恋简述</h2>
+	 <h2>异性恋简述</h2>
 	<p>异性恋一般指对异性（包括自身<strong>生理性别</strong>及<strong>性别认同</strong>为当事人的异性）能产生爱慕感、建立浪漫关系，或认为异性拥有性吸引力的一种现象。</p>
 	<p>不论社会文化背景如何，当中大多数人都是异性恋者，而异性性行为是迄今为止最常见的<a href="../sexual-activity" target="_self">性行为</a>类型。<sup id="cite_ref-异性恋" class="reference"><a href="#cite_note-异性恋" target="_self" aria-label="佐证资料">[7]</a></sup></p>
-	 <h2 class="mt-4 mb-4">同性恋简述</h2>
+	 <h2>同性恋简述</h2>
 	<p>同性恋是以同样的性别或<strong>社会性别</strong>为对象建立起浪漫吸引、性吸引或<a href="../sexual-activity" target="_self">性行为</a>的亲密关系，或以此性倾向做主要自我认同的现象。</p>
 	<p>男同性恋者在英文中通常以“Gay”称，女同性恋者通常以“Lesbian”称（有时根据其单词发音会以“蕾丝”“蕾丝边”“拉拉”等词汇代指）。</p>
-	 <h2 class="mt-4 mb-4">双性恋简述</h2>
+	 <h2>双性恋简述</h2>
 	<p>双性恋，一般指能对男性和女性皆产生爱慕感、建立浪漫关系，或认为两者皆有性吸引力的一种现象。</p>
 	<p>研究证实双性恋也可作为一种过渡性的性倾向认同。<sup id="cite_ref-双性恋" class="reference"><a href="#cite_note-双性恋" target="_self" aria-label="佐证资料">[5]</a></sup></p>
-	 <h2 class="mt-4 mb-4">泛性恋简述</h2>
+	 <h2>泛性恋简述</h2>
 	<p>泛性恋是指对任何生理性别、社会性别皆产生爱慕感、建立浪漫关系的现象。</p>
 	<p>和双性恋有所不同，泛性恋不对性别做区分，这超出二元性别之外。</p>
-	 <h2 class="mt-4 mb-4">无性恋简述</h2>
+	 <h2>无性恋简述</h2>
 	<p>无性恋是指认为他人缺乏性吸引力，或是缺乏或有着低度性欲的状态。</p>
 	<p>不同于性欲机能减退障碍，无性恋者一般不会因为性方面的事情感到显著的痛苦、感到具有社交困难，或是缺少性刺激。无性恋被认为是持久的无法感受到性吸引。</p>
 	
-	 <h2 class="mt-4 mb-4">LGBT</h2>
+	 <h2>LGBT</h2>
 	<p>LGBT是<strong>女同性恋者</strong>（<strong>L</strong>esbian）、<strong>男同性恋者</strong>（<strong>G</strong>ay）、<strong>双性恋者</strong>（<strong>B</strong>isexual）与<strong>跨性别者</strong>（<strong>T</strong>ransgender）的英文首字母缩略字。</p>
 	<p>LGBT通常会使用<strong>LGBT骄傲旗帜</strong>（彩虹旗）作为标志。</p>
 
@@ -223,7 +223,7 @@
 				<p class="bg-light" style="padding:10px;margin:5px 0;"><span class="darkmode-ignore">⭐</span> 你的 <a
 						href="/general/encourage" style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
 				<div class="article-info">
-					 <h2 class="mt-4 mb-4 reference">参考资料</h2>
+					 <h2 class="reference">参考资料</h2>
 <ol class="reference-list">
 	<li id="cite_note-青春期发育"><span class="mw-cite-backlink"><b><a href="#cite_ref-青春期发育" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">Evan G. Graber,青春期发育[G/OL]. 默沙东诊疗手册大众版, 2021(202104)[2022-06-14].&nbsp;<a href="https://www.msdmanuals.cn/home/children-s-health-issues/growth-and-development/adolescent-development">https://www.msdmanuals.cn/home/children-s-health-issues/growth-and-development/adolescent-development</a></span></li>
 <li id="cite_note-性概述"><span class="mw-cite-backlink"><b><a href="#cite_ref-性概述" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">George R. Brown,性概述[G/OL]. 默沙东诊疗手册大众版, 2021(202104)[2022-06-14].&nbsp;<a href="https://www.msdmanuals.cn/home/special-subjects/sexuality/overview-of-sexuality">https://www.msdmanuals.cn/home/special-subjects/sexuality/overview-of-sexuality</a></span></li>
@@ -235,7 +235,7 @@
 <li id="cite_note-泛性恋"><span class="mw-cite-backlink"><b><a href="#cite_ref-泛性恋" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">维基百科编者. 泛性戀[G/OL]. 维基百科, 2022(20220322)[2022-03-22].&nbsp;<a href="https://zh.wikipedia.org/w/index.php?title=%E6%B3%9B%E6%80%A7%E6%88%80&oldid=70752309">https://zh.wikipedia.org/w/index.php?title=%E6%B3%9B%E6%80%A7%E6%88%80&oldid=70752309</a></span></li>
 
 </ol>
- <h2 class="mt-4 mb-4">版权</h2>
+ <h2>版权</h2>
 <h3 class="mt-4 mb-3">正文内容</h3>
 <p>详见<a href="/general/copyright">版权许可</a>。</p>
 <h3 class="mt-4 mb-3">图片来源</h3>
