--- a/main/human-reproductive-system/index.html
+++ b/main/human-reproductive-system/index.html
@@ -197,7 +197,7 @@
 		</div>
 
 		<p><strong>生殖系统</strong>是生物体内的和生殖密切相关的器官（生殖器）成分的总称。<sup id="cite_ref-生殖系统" class="reference"><a href="#cite_note-生殖系统" target="_self" aria-label="佐证资料">[1]</a></sup></p>
-		<h2 class="mt-4 mb-4" id="女性生殖系统">女性生殖系统</h2>
+		<h2 id="女性生殖系统">女性生殖系统</h2>
 		<div class="row show">
 			<div class="col-md-6 img-box">
 				<img loading="lazy" src="img/111.jpg" class="img-thumbnail thumb" alt="图 1，张开的女性阴部（外生殖器）">
@@ -355,7 +355,7 @@
 		</p>
 		<p>卫生棉条一般附有说明书。卫生棉条放置形式各异，使用应按照说明书步骤进行。有关中毒性休克综合征（TSS）的说明在一些说明书上也可找到。</p>
 
-		 <h2 class="mt-4 mb-4" id="男性生殖系统">男性生殖系统</h2>
+		 <h2 id="男性生殖系统">男性生殖系统</h2>
 		<div class="row show">
 			<div class="col-md-6">
 				<img loading="lazy" src="img/121.jpg" class="img-thumbnail thumb" alt="图 8， 亚洲男性外生殖器（疲软状态，包皮覆盖）">
