--- a/main/sexual-activity/index.html
+++ b/main/sexual-activity/index.html
@@ -195,7 +195,7 @@
 		<p>性交的主要目的是为了获得性快感、繁殖下一代（仅阴茎插入阴道之行为，详见下文<a href="#new" target="_self">新生命</a>一节）。<sup id="cite_ref-性交" class="reference"><a href="#cite_note-性交" target="_self" aria-label="佐证资料">[1]</a></sup>所以，一般会反复刺激性器官使之发生性高潮，如阴茎—阴道性交中将阴茎反复插入、抽出。</p>
 		<p>无论何种阴道性交，初次性交并<span class="key">不一定</span>会出血或疼痛。<sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[9]</a></sup></p>
 		
-		<h2 class="mt-4 mb-2" id="mas">自慰</h2>
+		<h2 id="mas">自慰</h2>
 		<img loading="lazy" src="img/Klimt_Mulher_sentada.jpg" class="img-thumbnail thumb" alt="一名正在自慰的女性，画作艺术作品。">
 		<br><small>图 1 奥地利画家 Gustav Klimt 的画作《张开大腿的女人》</small>
 		<p>自慰，也作手淫，是指对自我性器官进行性刺激以达到<strong>高潮</strong>和快感的性行为。 </p>
@@ -214,13 +214,13 @@
 		
 
 		
-		<h3 class="mt-4 mb-3">女性自慰简述</h3>
+		<h3>女性自慰简述</h3>
 		
 		<p>女性的自慰一般以摩擦<strong>阴蒂</strong>、<strong>小阴唇</strong>附近进行，以及用手指插入<strong>阴道</strong>，进行对前壁的刺激。为避免受伤，建议在阴道充分湿润或使用合适的润滑剂后再插入阴道。初次进行插入阴道的行为时，<strong>处女膜</strong>可能会受损（亦有可能不会），出现暂时性的轻微出血和疼痛，属于正常情况。处女膜一般环绕在阴道口周围，中央开口因人而异大小、形状不一。您可参考《人类生殖系统》章节的相关信息。</p>
 		<p>阴蒂是女性最为敏感的部位，是女性性愉悦的主要器官。许多女性依靠对阴蒂的刺激达到高潮。<sup id="cite_ref-阴蒂" class="reference"><a href="#cite_note-阴蒂" target="_self" aria-label="佐证资料">[5]</a></sup><sup id="cite_ref-阴蒂-维基百科" class="reference"><a href="#cite_note-阴蒂-维基百科" target="_self" aria-label="佐证资料">[6]</a></sup></p>
 		<p>阴道口是高度可兴奋区域。有研究报告指出阴道前壁是性敏感区域，其距阴道口内部 5 ~ 8 厘米处，称之为 <strong>G 点（格雷芬贝格点）</strong>，受到刺激时会引起性快感。不过，学术界就 G 点与其他器官的关系、范围存在争议。<sup id="cite_ref-G点" class="reference"><a href="#cite_note-G点" target="_self" aria-label="佐证资料">[7]</a></sup><sup id="cite_ref-性学观止" class="reference"><a href="#cite_note-性学观止" target="_self" aria-label="佐证资料">[9]</a></sup></p>
 
-		<h3 class="mt-4 mb-3">男性自慰简述</h3>
+		<h3>男性自慰简述</h3>
 		<p>男性通常以握住<strong>阴茎</strong>上下移动摩擦的方式自慰。对于未进行过包皮手术的男性，可以利用包皮反复刺激<strong>龟头</strong>；而对于包皮无法覆盖龟头、在自慰过程中龟头裸露的男性，可以采取使用润滑液或使用唾液进行润滑后摩擦，避免引起龟头疼痛。</p>
 		
 		 <h2>性同意</h2>
@@ -234,7 +234,7 @@
 		</video>
 		<p><small>《喝茶与同意》，版权所有 ©2015 Emmeline May and Blue Seat Studios, via <a href="https://vimeo.com/128105683">https://vimeo.com/128105683</a></small></p>
 		
-		<h2 class="mt-4 mb-3">风险规避</h2>
+		<h2>风险规避</h2>
 		<p>对自己的性行为做出明智的决策有益于个人的健康和福祉。</p>
 		<p>尽管性行为对身心健康和个人关系具有一定意义上积极的影响，但仍然有一些潜在的风险。然而，这些风险并不是让人们放弃性行为、因噎废食的理由，而是需要我们更加了解如何在性行为中保护自己和他人，并在做出决定前全面考虑这些风险。</p>
 		<p>
@@ -251,7 +251,7 @@
 			<li><a href="https://www.cdc.gov/condomeffectiveness/Dental-dam-use.html">制作口交屏障 - 美国疾控中心（英文资料）</a></li>
 		</ul>
 				<p>为了减少风险，与他人发生性行为时，您应当了解必要的避孕与预防性传播疾病的知识。欲了解详情，可在稍后阅读本站内<a href="/main/std">《性传播疾病》</a>一章。对于希望了解避孕的读者，可在稍后阅读本站内<a href="/main/contraception">《避孕》</a>一章。</p>
-		<h2 class="mt-4 mb-2" id="new">新生命</h2>
+		<h2 id="new">新生命</h2>
 		<!--<p>以下文字描述可对照 <em>图 2 女性生殖系统</em> 参考。</p>-->
 		<p>在<strong>性交</strong>过程中，男性的<strong>阴茎</strong>受刺激而勃起变硬，从<strong>阴道口</strong>进入<strong>阴道</strong>，阴道与阴茎摩擦，在一段时间后阴茎在阴道内<strong>射精</strong>。</p>
 		<p>射精时排出含有<strong>精子</strong>的<strong>精液</strong>到<strong>阴道</strong>内，精子经过阴道及<strong>子宫颈</strong>，到达<strong>子宫</strong>或<strong>输卵管</strong>。精子与位于其内的<strong>卵细胞</strong>结合，卵细胞完成<strong>受精</strong>。</p>
@@ -285,9 +285,9 @@
 
 		</ol>
 		 <h2>版权</h2>
-		<h3 class="mt-4 mb-3">正文内容</h3>
+		<h3>正文内容</h3>
 		<p>详见<a href="/general/copyright">版权许可</a>。</p>
-		<h3 class="mt-4 mb-3">图片来源</h3>
+		<h3>图片来源</h3>
 		<p>本页图片来自互联网，且均在版权合规要求下使用。</p>
 		<table class="table table-bordered" style="overflow:auto">
 			<tbody>
@@ -309,7 +309,7 @@
 				</tr>
 			</tbody>
 		</table>
-		<h3 class="mt-4 mb-3">视频来源</h3>
+		<h3>视频来源</h3>
 		<p><cite>Tea and Consent</cite>. Copyright ©2015 Emmeline May and Blue Seat Studios.</p>
 		<blockquote>Non-commercial use: Video must have copyright information displayed below video, with a live link to original. No alteration to the video may be made, other than translation.</blockquote>
 				</div>
