--- a/main/sexual-orientation/index.html
+++ b/main/sexual-orientation/index.html
@@ -236,9 +236,9 @@
 
 </ol>
  <h2>版权</h2>
-<h3 class="mt-4 mb-3">正文内容</h3>
+<h3>正文内容</h3>
 <p>详见<a href="/general/copyright">版权许可</a>。</p>
-<h3 class="mt-4 mb-3">图片来源</h3>
+<h3>图片来源</h3>
 <p>本页图片来自互联网，且均在版权合规要求下使用。</p>
 <table class="table table-bordered" style="overflow:auto">
 	<tbody>
