修改支持页面，在主页悬挂横幅。

--- a/general/encourage/index.html
+++ b/general/encourage/index.html
@@ -194,14 +194,15 @@
 			</div>
 			<div style="box-shadow: 5px 0 0 rgba(0, 0, 0, 0.5);"></div>
 			<div class="main">
-				    <p>感谢您访问 KnowSex 。</p>
-	<p>KnowSex 团队独立运营本站，运营资金来源于读者的支持、站长自费和支付宝赚钱红包的推广。</p>
-	<p>如果您觉得 KnowSex 不错，希望您可以推荐给朋友，宣传 KnowSex 网站。如果您有意见和疑问，也欢迎给我们发邮件，在页面底部您可以找到邮箱地址。</p>
-    
-	<p>您也可以使用微信扫码支持 KnowSex，您的支持是我们维护 KnowSex 网站的动力。</p>
-	<!-- <p>您亦可扫描使用 KnowSex 的支付宝消费红包，可用于到店消费。使用 KnowSex 提供的红包会给 KnowSex 一定的收益。</p>		 -->
-	
+				
+	<p>作为性教育网站，KnowSex 的内容经过仔细编排，并且在外观设计和文字排版做了很多努力和调整，以优化读者的感观与阅读体验。</p>
+	<p>获取和阅读 KnowSex 不收取费用，也没有商业广告。</p>
+	<p>但网站的运营需要一些资金，这些资金用于服务器、域名、带宽等费用。我们的成员都是志愿者，不从中获利。</p>
+	<p>如果每位浏览 KnowSex 的读者都愿意支出 1 元，按照常规流量，一天便可筹够一年的总开支。如果您觉得网站的内容还不错，且愿意帮助 KnowSex 支出一些费用维持网站运作，欢迎您向我们捐助。我们目前仅支持微信支付。</p>
 	<p>KnowSex 以年为单位更新资金使用情况，每年年初以电子表格形式公布详单。您可在<a href="../fund/">资金详单</a>页面下载已公布的资金详单。</p>
+	<p>您可以通过扫描下方二维码捐助 KnowSex：</p>
+	
+	
 	<div class="row show">
 		<div class="col-md-6 img-box">
 			<img loading="lazy" src="img/wechatCode.jpg" alt="收款码" class="img-thumbnail" style="width:100%;max-width:500px">
