--- a/index.html
+++ b/index.html
@@ -174,10 +174,11 @@
 
 			    <div class="main">
                 <p class="bg-light tip-bar"><span class="darkmode-ignore">😥</span> 因商标纠纷，网站即日起撤去纠纷标识，暂时使用“KnowSex”作为网站名称。</p>
+        <p class="bg-light tip-bar"><span class="darkmode-ignore">😔</span> 由于<a href="https://post.knowsex.net/archives/trademark-dispute">收到诉讼</a>，目前网站资金出现赤字。如果您觉得网站内容对您有帮助，请考虑<a href="/sub/Encourage.html" style="text-decoration:underline">支持</a>网站的维护与运营。</p>
         <div id="domain-notice"></div>
         <div class="browser_tip"></div>
         <br>
-        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-06-19</div>
+        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-07-10</div>
 
         <div class="header-thumb">
   <a href="main/human-reproductive-system">
