--- a/general/encourage/index.html
+++ b/general/encourage/index.html
@@ -200,7 +200,7 @@
 	<p>但网站的运营需要一些资金，这些资金用于服务器、域名、带宽等费用。我们的成员都是志愿者，不从中获利。</p>
 	<p>如果每位浏览 KnowSex 的读者都愿意支出 1 元，按照常规流量，一天便可筹够一年的总开支。如果您觉得网站的内容还不错，且愿意帮助 KnowSex 支出一些费用维持网站运作，欢迎您向我们捐助。我们目前仅支持微信支付。</p>
 	<p>KnowSex 以年为单位更新资金使用情况，每年年初以电子表格形式公布详单。您可在<a href="../fund/">资金详单</a>页面下载已公布的资金详单。</p>
-	<p>您可以通过扫描下方二维码捐助 KnowSex：</p>
+	<p>您可以使用微信扫描下方二维码捐助 KnowSex：</p>
 	
 	
 	<div class="row show">
