--- a/main/human-reproductive-system/index.html
+++ b/main/human-reproductive-system/index.html
@@ -641,9 +641,10 @@
 			我们尝试联系了<a href="https://www.oupchina.com.hk/">牛津大学出版社（中国）有限公司</a>，
 			但对方未回应。本着教学目的，兹按照
 			<a
-				href="http://www.npc.gov.cn/npc/c30834/202011/848e73f58d4e4c5b82f69d25d46048c6.shtml">《中华人民共和国著作权法》</a>第二十四条与<a
-				href="https://www.copyright.gov/title17/92chap1.html#107">《美国版权法》Chapter 1 § 107</a>
-			之规定对该图片进行合理使用（Fair use）之引用。如有版权问题，请联系 <a href="mailto:knowsex@outlook.com">knowsex@outlook.com</a> 。
+				href="http://www.npc.gov.cn/npc/c30834/202011/848e73f58d4e4c5b82f69d25d46048c6.shtml">《中华人民共和国著作权法》</a>第二十四条、<a
+				href="https://www.copyright.gov/title17/92chap1.html#107">《美国版权法》第一章第 107 条、</a>与
+				<a href="https://www.law.go.kr/법령/저작권법/(20221208,18547,20211207)/제35조의5">大韩民国《著作权法》第 35 条之 5</a> 之规定
+				对该图片进行合理使用（“Fair use”“저작물의 공정한 이용”）之引用。如有版权问题，请联系 <a href="mailto:knowsex@outlook.com">knowsex@outlook.com</a> 。
 		</p>
 		<p>该图片所属图书版权归 Oxford University Press, Inc. 所有，版权声明如下。</p>
 		<blockquote lang="en">Copyright © 2000 by Oxford University Press, Inc.</blockquote>
@@ -654,13 +655,11 @@
 			published by Oxford University Press, Inc.
 			We have tried to contact <a href="https://www.oupchina.com.hk/">Oxford University Press (China), Inc.</a>
 			but have not received a response. For educational purposes,
-			this image is cited for fair use in accordance with
+			this image is cited for fair use(“저작물의 공정한 이용”) in accordance with
 			Article 24 of the <a
-				href="http://www.npc.gov.cn/npc/c30834/202011/848e73f58d4e4c5b82f69d25d46048c6.shtml">Copyright Law of
-				the People's Republic of China</a>
-			and
-			<a href="https://www.copyright.gov/title17/92chap1.html#107">Copyright Law of the United States (Title 17)
-				Chapter 1 § 107</a>.
+				href="http://www.npc.gov.cn/npc/c30834/202011/848e73f58d4e4c5b82f69d25d46048c6.shtml"><i>Copyright Law of the People's Republic of China</i></a>, 
+			<a href="https://www.copyright.gov/title17/92chap1.html#107">Chapter 1 § 107 of <i>Copyright Law of the United States (Title 17)</i></a> and 
+			<a href="https://www.law.go.kr/법령/저작권법/(20221208,18547,20211207)/제35조의5">Article 35-5 of <i>Copyright Law of the Republic of Korea</i></a>.
 			If you have any questions about copyright, please contact <a
 				href="mailto:knowsex@outlook.com">knowsex@outlook.com</a> .
 		</p>
