图片编号勘误。

--- a/main/human-reproductive-system/index.html
+++ b/main/human-reproductive-system/index.html
@@ -287,7 +287,6 @@
 		<img loading="lazy" src="img/hymen.jpg" class="img-thumbnail thumb" alt="图 6，处女膜的其中四种形态">
 		<br>
 		<small>图 6 处女膜的其中四种形态</small>
-
 		<!-- <p>您可以通过点击下方按钮阅读美国家庭医师学会（AAFP）的文章《评估儿童的性虐待》（Evaluating the Child for Sexual Abuse）查看有关处女膜的照片。</p>
 			<p>在该文中：</p>
 			<ul>
@@ -509,7 +508,7 @@
 			</div> -->
 
 		<h3>图片来源</h3>
-		<p>本页图片除图 5 外，均来自互联网，且均在版权合规要求下使用。关于图 5 的版权，请见下方“有关图 5 的版权说明”。</p>
+		<p>本页图片除图 6 外，均来自互联网，且均在版权合规要求下使用。关于图 6 的版权，请见下方<a href="#hymen-image-cr" target="_self">“有关图 6 的版权说明”</a>。</p>
 				<table class="table table-bordered" style="overflow:auto">
 			<tbody>
 				<tr>
@@ -634,17 +633,16 @@
 				</tr>
 			</tbody>
 		</table>
-		<h4 style="font-weight: bold;">有关图 6 的版权说明</h4>
+		<h4 style="font-weight: bold;" id="hymen-image-cr">有关图 6 的版权说明</h4>
 		<p>
 			图 6 改自 Oxford University Press, Inc. 出版图书
 			<cite>Evaluation of the Sexually Abused Child SECOND EDITION</cite> 的插图。
 			我们尝试联系了<a href="https://www.oupchina.com.hk/">牛津大学出版社（中国）有限公司</a>，
 			但对方未回应。本着教学目的，兹按照
-			<a
-				href="http://www.npc.gov.cn/npc/c30834/202011/848e73f58d4e4c5b82f69d25d46048c6.shtml">《中华人民共和国著作权法》</a>第二十四条、<a
-				href="https://www.copyright.gov/title17/92chap1.html#107">《美国版权法》第一章第 107 条、</a>与
-				<a href="https://www.law.go.kr/법령/저작권법/(20221208,18547,20211207)/제35조의5">大韩民国《著作权法》第 35 条之 5</a> 之规定
-				对该图片进行合理使用（“Fair use”“저작물의 공정한 이용”）之引用。如有版权问题，请联系 <a href="mailto:knowsex@outlook.com">knowsex@outlook.com</a> 。
+			<a href="http://www.npc.gov.cn/npc/c30834/202011/848e73f58d4e4c5b82f69d25d46048c6.shtml">《中华人民共和国著作权法》</a>第二十四条、
+			<a href="https://www.copyright.gov/title17/92chap1.html#107">《美国版权法》第一章第 107 条</a>与
+			<a href="https://www.law.go.kr/법령/저작권법/(20221208,18547,20211207)/제35조의5">大韩民国《著作权法》第 35 条之 5</a> 之规定
+			对该图片进行合理使用（“Fair use”“저작물의 공정한 이용”）之引用。如有版权问题，请联系 <a href="mailto:knowsex@outlook.com">knowsex@outlook.com</a> 。
 		</p>
 		<p>该图片所属图书版权归 Oxford University Press, Inc. 所有，版权声明如下。</p>
 		<blockquote lang="en">Copyright © 2000 by Oxford University Press, Inc.</blockquote>
