增加新内容：《青春期》

--- a/general/communicate/index.html
+++ b/general/communicate/index.html
@@ -107,6 +107,7 @@
 							</a>
 							<ul class="dropdown-menu text-center">
 								<li><a class="dropdown-item" href="/main/human-reproductive-system">人类生殖系统</a></li>
+								<li><a class="dropdown-item" href="/main/puberty-and-adolescence">青春期</a></li>
 								<li><a class="dropdown-item" href="/main/sexual-activity">性行为</a></li>
 								<li><a class="dropdown-item" href="/main/sexual-orientation">性取向</a></li>
 								<li><a class="dropdown-item" href="/main/contraception">避孕</a></li>
@@ -183,6 +184,7 @@
 <div class="mailMain">
     <!-- style="opacity: .5;pointer-events: none;" -->
     <div class="tip">
+        <p><strong style="color:brown">如果您遇到紧急情况，请直接致电当地紧急服务电话。我们无法为您提供紧急情况的即时咨询。</strong></p>
         <p><strong style="color:brown">医学声明：</strong></p>
         <p style="font-weight:300">囿于团队成员知识所限，KnowSex 提供的内容不能被解读为试图给予或提供特定医疗意见，或属于医疗临床实务的一部分，不能取代医护专业人士的建议和药品说明书。</p>
     </div>
