--- a/main/sexual-activity/index.html
+++ b/main/sexual-activity/index.html
@@ -107,6 +107,7 @@
 							</a>
 							<ul class="dropdown-menu text-center">
 								<li><a class="dropdown-item" href="/main/human-reproductive-system">人类生殖系统</a></li>
+								<li><a class="dropdown-item" href="/main/puberty-and-adolescence">青春期</a></li>
 								<li><a class="dropdown-item" href="/main/sexual-activity">性行为</a></li>
 								<li><a class="dropdown-item" href="/main/sexual-orientation">性取向</a></li>
 								<li><a class="dropdown-item" href="/main/contraception">避孕</a></li>
@@ -280,7 +281,7 @@
 <li id="cite_note-阴蒂-维基百科"><span class="mw-cite-backlink"><b><a href="#cite_ref-阴蒂-维基百科" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">维基百科编者. 陰蒂[G/OL]. 维基百科, 2022(20220925)[2022-09-25].&nbsp;<a href="https://zh.wikipedia.org/w/index.php?title=%E9%99%B0%E8%92%82&oldid=73811163">https://zh.wikipedia.org/w/index.php?title=%E9%99%B0%E8%92%82&oldid=73811163</a></span></li>
 <li id="cite_note-G点"><span class="mw-cite-backlink"><b><a href="#cite_ref-G点" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">维基百科编者. G点[G/OL]. 维基百科, 2022(20220330)[2022-03-30].&nbsp;<a href="https://zh.wikipedia.org/w/index.php?title=G%E7%82%B9&oldid=70896950">https://zh.wikipedia.org/w/index.php?title=G%E7%82%B9&oldid=70896950</a></span></li>
 <li id="cite_note-妊娠"><span class="mw-cite-backlink"><b><a href="#cite_ref-妊娠" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">维基百科编者. 妊娠[G/OL]. 维基百科, 2021(20210905)[2021-09-05].&nbsp;<a href="https://zh.wikipedia.org/w/index.php?title=%E5%A6%8A%E5%A8%A0&oldid=67529847">https://zh.wikipedia.org/w/index.php?title=%E5%A6%8A%E5%A8%A0&oldid=67529847</a></span></li>
-<li id="cite_note-性学观止"><span class="mw-cite-backlink"><b><a href="#cite_ref-性学观止" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">贺兰特·凯查杜里安.性学观止[M].北京:世界图书出版公司北京公司,2007.9:40,43,71,345 - ISBN 978-7-5062-8688-6</span></li>
+<li id="cite_note-性学观止"><span class="mw-cite-backlink"><b><a href="#cite_ref-性学观止" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">贺兰特·凯查杜里安.性学观止[M].北京:世界图书出版公司北京公司,2007.9:40,43,71,345. ISBN 978-7-5062-8688-6</span></li>
 <li id="cite_note-20世纪对自我性刺激的认识"><span class="mw-cite-backlink"><b><a href="#cite_ref-20世纪对自我性刺激的认识" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">Erwin J. Haeberle. 20世纪对自我性刺激的认识[G/OL]. 性学资料库, 2007(200703)[2022-06-02].&nbsp;<a href="http://www.sexarchive.info/ECC6/html/20th_century.html">http://www.sexarchive.info/ECC6/html/20th_century.html</a></span></li>
 
 		</ol>
