--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 .std-bg {
     background-image: url('./main/std/dominoes.jpg');
 }
+.pa-bg {
+    background-image: url('./main/puberty-and-adolescence/source/pa-cover.jpg');
+}
 	</style>
 </head>
 
@@ -113,6 +116,7 @@
 							</a>
 							<ul class="dropdown-menu text-center">
 								<li><a class="dropdown-item" href="/main/human-reproductive-system">人类生殖系统</a></li>
+								<li><a class="dropdown-item" href="/main/puberty-and-adolescence">青春期</a></li>
 								<li><a class="dropdown-item" href="/main/sexual-activity">性行为</a></li>
 								<li><a class="dropdown-item" href="/main/sexual-orientation">性取向</a></li>
 								<li><a class="dropdown-item" href="/main/contraception">避孕</a></li>
@@ -178,7 +182,7 @@
         <div id="domain-notice"></div>
         <div class="browser_tip"></div>
         <br>
-        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-07-16</div>
+        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-07-21</div>
 
         <div class="header-thumb">
   <a href="main/human-reproductive-system">
@@ -187,6 +191,17 @@
       <div class="header-title">
         <h1>人类生殖系统</h1>
         <p aria-hidden="true">Human Reproductive System</p>
+      </div>
+    </div>
+  </a>
+</div>
+        <div class="header-thumb">
+  <a href="main/puberty-and-adolescence">
+    <div class="header-img pa-bg"></div>
+    <div class="header-cover">
+      <div class="header-title">
+        <h1>青春期</h1>
+        <p aria-hidden="true">Puberty and Adolescence</p>
       </div>
     </div>
   </a>
