--- a/main/std/genital-wart/index.html
+++ b/main/std/genital-wart/index.html
@@ -111,6 +111,7 @@
 							</a>
 							<ul class="dropdown-menu text-center">
 								<li><a class="dropdown-item" href="/main/human-reproductive-system">人类生殖系统</a></li>
+								<li><a class="dropdown-item" href="/main/puberty-and-adolescence">青春期</a></li>
 								<li><a class="dropdown-item" href="/main/sexual-activity">性行为</a></li>
 								<li><a class="dropdown-item" href="/main/sexual-orientation">性取向</a></li>
 								<li><a class="dropdown-item" href="/main/contraception">避孕</a></li>
