--- a/main/puberty-and-adolescence/index.html
+++ b/main/puberty-and-adolescence/index.html
@@ -171,7 +171,14 @@ background-image: url('source/pa-cover.jpg');
 		</div>
 	</nav>
 
-					<article itemscope itemtype="http://schema.org/Article">
+			<div class="cover">
+		<div class="warn">
+			<p class="visually-hidden">如果您正在使用屏幕阅读器，请注意：本页面含有裸露的性器官图片。本页已使用一层模糊处理，您可以不必理会接下来三句提示，继续浏览。</p>
+			<p aria-hidden="true">本页面含有裸露的性器官图片，或不适宜在公众场合展示。轻触或点击以继续。</p>
+			<p aria-hidden="true">Contains nudity, click or touch to continue.</p>
+		</div>
+	</div>
+	<div class="seen">		<article itemscope itemtype="http://schema.org/Article">
 			<div class="header-thumb">
 				<div class="header-img pa-bg"></div>
 				<div class="header-cover">
@@ -519,7 +526,15 @@ background-image: url('source/pa-cover.jpg');
 									</p>
 			</div>
 					</footer>
-				<script src="/script/script.js"></script>
+		<script>
+	$(document).ready(function () {
+		$("div.cover").click(function () {
+			$(".seen").css("filter", "blur(0)");
+			$("div.cover").fadeOut("fast");
+		});
+	})
+</script>
+		<script src="/script/script.js"></script>
 		<script src="/script/domain-check.js"></script>
 		<!-- <script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/Han/3.3.0/han.min.js" type="application/javascript"></script> -->
 		<script>
